// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component match snapshot correctly 1`] = `
<div>
  <h1>
    React
  </h1>
</div>
`;

exports[`Header component match snapshot correctly 2`] = `
<div>
  <h1>
    React
  </h1>
</div>
`;

exports[`Header component match snapshot correctly 3`] = `
<Header
  Header=""
  title="React"
>
  <div>
    <h1>
      React
    </h1>
  </div>
</Header>
`;
